// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DatePicker component tests should render 1`] = `
.c3 {
  cursor: pointer;
}

.c2 {
  height: 16px;
  width: 16px;
  line-height: 16px;
}

.c2 * {
  height: inherit;
  width: inherit;
}

.c1 {
  margin-left: 5px;
}

.c1:hover {
  cursor: pointer;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-right: 5px;
  width: auto;
}

@media print {
  .c3 {
    display: none;
  }
}

<div
  class="react-datepicker-wrapper"
>
  <div
    class="react-datepicker__input-container"
  >
    <div
      class="c0"
      width="auto"
    >
      2018/11/11
      <span
        class="c1 c2 c3"
        data-testid="svg-icon"
      >
        <svg>
          calendar.svg
        </svg>
      </span>
    </div>
  </div>
</div>
`;

exports[`DatePicker component tests should render 2`] = `
<div
  class="react-datepicker-wrapper"
>
  <div
    class="react-datepicker__input-container"
  >
    <div
      class="sc-iBEsjs jPgHBa"
      width="auto"
    >
      2018/11/11
      <span
        class="sc-LKuAh kEybis sc-jzJRlG lcpYA sc-fjdhpX fEEsMp"
        data-testid="svg-icon"
      >
        <svg>
          calendar.svg
        </svg>
      </span>
    </div>
  </div>
</div>
`;
